第二天的学习
创建了一个响应文件的服务器

--- a/1_request/getJson.html
+++ b/1_request/getJson.html
@@ -15,7 +15,7 @@
 <script>
     $.ajax({
         type: "GET",
-        url: 'http://47.75.195.199/NodeApi/test2.json',
+        url: 'http://apis.juhe.cn/goodbook/catalog?dtype=&key=ab998bf4d11fcd641e552013828424c7',
         dataType: 'jsonp',
         jsonp: 'callback',
         jsonpCallback:"successCallback",
